Fix of Rate Card Alignment
Fix of Rate Card Alignment

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -32,7 +32,7 @@
 
 .restaurant-RateSlab {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
